objects/extra_curricular_activity__c.object
<CustomObject>
    <fields>
        <fullName>NCC__c</fullName>
        <label>NCC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NCC</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sports__c</fullName>
        <label>Sports</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Badminton</fullName>
                </value>
                <value>
                    <fullName>volleyball</fullName>
                </value>
                <value>
                    <fullName>basketball</fullName>
                </value>
                <value>
                    <fullName>Skates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yoga__c</fullName>
        <label>Yoga</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginning</fullName>
                </value>
                <value>
                    <fullName>intermediate</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>extra curricular activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>extra curricular activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>